--- a/wpf/MainWindow.xaml
+++ b/wpf/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf"
         mc:Ignorable="d"
-        Title="Калькулятор ОПЗ" Height="700" Width="1000">
+        Title="Калькулятор ОПЗ" Height="700" Width="1200">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="175*"/>
@@ -15,18 +15,18 @@
             <ColumnDefinition Width="211*"/>
             <ColumnDefinition Width="189*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="tbForInputExpression" TextWrapping="Wrap" Margin="224,31,0,0" TextChanged="TbForUsersText" HorizontalAlignment="Left" Width="352" Height="32" Grid.ColumnSpan="2" TextAlignment="Left" VerticalAlignment="Top"/>
-        <Button x:Name="btForCalculate" Content="Посчитать" Margin="348,265,0,134" Click="BtForCalculate" HorizontalAlignment="Left" Width="90" Grid.Column="1" Grid.Row="1"/>
-        <Label x:Name="lbForInput" Content="Введите выражение:" Margin="54,31,0,38" HorizontalAlignment="Left"/>
-        <Canvas x:Name="canvasForFunc" Grid.ColumnSpan="2" Margin="54,0,0,94" Background="White" Grid.RowSpan="2" ClipToBounds="True" Height="493" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="660" />
-        <Label x:Name="lbForInputStart" Content="Начало:" Margin="270,41,0,0" HorizontalAlignment="Left" Grid.Column="1" Width="96" Height="159" VerticalAlignment="Center" ClipToBounds="True"/>
-        <Label x:Name="lbForInputEnd" Content="Конец:" Margin="270,154,0,370" HorizontalAlignment="Left" Grid.Column="1" Width="96" Grid.RowSpan="2" ClipToBounds="True"/>
-        <Label x:Name="lbForInputStep" Content="Шаг:" Margin="270,37,0,262" HorizontalAlignment="Left" Grid.Column="1" Width="96" Grid.Row="1" ClipToBounds="True"/>
-        <Label x:Name="lbForInputSize" Content="Масштаб:" Margin="270,163,0,183" HorizontalAlignment="Left" Grid.Column="1" Width="96" Grid.Row="1"/>
-        <TextBox x:Name="tbForInputStart" TextWrapping="Wrap" Margin="0,0,34,112" TextChanged="TbForUsersText" TextAlignment="Left" Grid.Column="1" Height="32" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="168" ClipToBounds="True"/>
-        <TextBox x:Name="tbForInputEnd" TextWrapping="Wrap" Margin="270,184,0,9" TextChanged="TbForUsersText" TextAlignment="Left" Grid.Column="1" HorizontalAlignment="Left" Width="168" ClipToBounds="True"/>
-        <TextBox x:Name="tbForInputStep" TextWrapping="Wrap" Margin="270,86,0,0" TextChanged="TbForUsersText" TextAlignment="Left" Grid.Column="1" Grid.Row="1" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="168" ClipToBounds="True"/>
-        <TextBox x:Name="tbForInputSize" TextWrapping="Wrap" Margin="0,0,34,217" TextChanged="TbForUsersText" HorizontalAlignment="Right" Width="168" Height="32" TextAlignment="Left" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="1" ClipToBounds="True"/>
+        <TextBox x:Name="tbForInputExpression" TextWrapping="Wrap" Margin="224,0,0,147" TextChanged="TbForUsersText" VerticalContentAlignment="Center" Grid.ColumnSpan="2" TextAlignment="Left" BorderBrush="Black" Height="44" FontFamily="Verdana" HorizontalAlignment="Left" Width="552" VerticalAlignment="Bottom"/>
+        <Button x:Name="btForCalculate" Content="Посчитать" Margin="309,305,0,0" Click="BtForCalculate" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Width="185" Height="57" VerticalAlignment="Top" BorderBrush="Black"/>
+        <Label x:Name="lbForInput" Content="Введите выражение:" Margin="54,0,0,147" FontFamily="Verdana" Height="42" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="170"/>
+        <Canvas x:Name="canvasForFunc" Grid.ColumnSpan="2" Margin="54,111,0,0" Background="White" Grid.RowSpan="2" ClipToBounds="True" Height="516" VerticalAlignment="Top" HorizontalAlignment="Left" Width="804" />
+        <Label x:Name="lbForInputStart" Content="Начало:" Margin="270,0,0,139" Grid.Column="1" HorizontalAlignment="Left" Width="263" HorizontalContentAlignment="Center" Height="34" VerticalAlignment="Bottom" FontFamily="Verdana" />
+        <Label x:Name="lbForInputEnd" Content="Конец:" Margin="270,0,0,37" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="263" Height="33" VerticalAlignment="Bottom" FontFamily="Verdana"/>
+        <Label x:Name="lbForInputStep" Content="Шаг:" Margin="270,27,0,0" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="263" Height="31" VerticalAlignment="Top" FontFamily="Verdana"/>
+        <Label x:Name="lbForInputSize" Content="Масштаб:" Margin="270,121,0,0" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="263" Height="35" VerticalAlignment="Top" FontFamily="Verdana"/>
+        <TextBox x:Name="tbForInputStart" TextWrapping="Wrap" Margin="270,0,0,0" TextChanged="TbForUsersText" TextAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1" BorderBrush="Black" Width="263" HorizontalAlignment="Left" Cursor="" FontFamily="Verdana" Height="54" VerticalAlignment="Center"/>
+        <TextBox x:Name="tbForInputEnd" TextWrapping="Wrap" Margin="270,0,0,435" TextChanged="TbForUsersText" TextAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1" BorderBrush="Black" Grid.RowSpan="2" Width="263" HorizontalAlignment="Left" FontFamily="Verdana" Height="54" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="tbForInputStep" TextWrapping="Wrap" Margin="270,62,0,0" TextChanged="TbForUsersText" TextAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="263" Height="54" BorderBrush="Black" FontFamily="Verdana" />
+        <TextBox x:Name="tbForInputSize" TextWrapping="Wrap" Margin="270,156,0,0" TextChanged="TbForUsersText" TextAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" BorderBrush="Black" Width="263" Height="54" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Verdana"/>
 
     </Grid>
 </Window>
